--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -59,6 +59,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/formLayout"
         android:layout_marginTop="18dp"
+        android:maxLines="100"
+        android:scrollbars="vertical"
         android:text="@string/ScreenDescription" />
 
     <Button
@@ -70,20 +72,5 @@
         android:gravity="center"
         android:text="@string/CheckIN" />
 
-    <android.widget.Toolbar
-        android:id="@+id/toolbar1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/SubmitButton"
-        android:layout_alignTop="@+id/formLayout"
-        android:layout_marginLeft="20dp" />
-
-    <android.widget.ActionMenuView
-        android:id="@+id/actionMenuView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="70dp" />
-
+   
 </RelativeLayout>
