--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_rect1px"
     tools:context="${packageName}.${activityClass}" >
 
     <LinearLayout
@@ -15,30 +16,18 @@
         <RelativeLayout
             android:id="@+id/SubmitLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height= "0dp"
             android:layout_weight="1"
             android:gravity="center" >
         </RelativeLayout>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/scnButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/formLayout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="98dp"
-        android:minHeight="100dip"
-        android:minWidth="150dip"
-        android:text="@string/scnBtnTxt" />
-
     <RelativeLayout
         android:id="@+id/commentsRow"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_below="@+id/SubmitButton"
+        android:layout_below="@+id/formLayout"
         android:layout_centerHorizontal="true"
-        android:layout_weight="1"
         android:background="@drawable/apptheme_btn_default_disabled_holo_light"
         android:gravity="center"
         android:visibility="invisible" >
@@ -55,19 +44,29 @@
     <TextView
         android:id="@+id/descView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/formLayout"
         android:layout_marginTop="18dp"
-        android:text="@string/ScreenDescription" />
+        android:background="@drawable/comments_bg_1px"
+        android:paddingTop="10dp"
+        android:text="@string/ScreenDescription"
+        android:textColor="@color/apptheme_color" />
 
-    <Button
-        android:id="@+id/SubmitButton"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/qrLauncherbtn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/scnButton"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:text="@string/CheckIN" />
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/descView"
+        android:src="@drawable/circle_button" />
+    
+    <ImageView
+        android:id="@+id/checkInbtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/descView"
+        android:src="@drawable/circle_button" />
 
 </RelativeLayout>
