Added buttons. crashes on height problems

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_rect1px"
+    android:background="@drawable/background_bitmap"
     tools:context="${packageName}.${activityClass}" >
 
     <LinearLayout
@@ -48,25 +48,43 @@
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/formLayout"
         android:layout_marginTop="18dp"
-        android:background="@drawable/comments_bg_1px"
+        android:background="@drawable/inputbox1pxios"
         android:paddingTop="10dp"
         android:text="@string/ScreenDescription"
         android:textColor="@color/apptheme_color" />
 
-    <ImageView
-        android:id="@+id/qrLauncherbtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+  <Button
+        android:id="@+id/scan_unpressed"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/descView"
-        android:src="@drawable/circle_button" />
+        android:background="@drawable/scan_selector" />
+
+<Button
+        android:id="@+id/submit_unpressed"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/descView"
+        android:background="@drawable/submit_selector" />
+    <!-- 
     
     <ImageView
-        android:id="@+id/checkInbtn"
+        android:id="@+id/scan_pressed"
+        android:contentDescription="scan pressed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/descView"
-        android:src="@drawable/circle_button" />
+        android:src="@drawable/scanbtn_pressed" />
 
+    
+    <ImageView
+        android:id="@+id/submit_pressed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/descView"
+        android:contentDescription="scan pressed"
+        android:src="@drawable/submit_pressed" />
+ -->
 </RelativeLayout>
