--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     >
 
-    <TextView
+    <EditText
         android:id="@+id/titleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
