--- a/res/values-v11/themes_beentheretheme.xml
+++ b/res/values-v11/themes_beentheretheme.xml
@@ -5,7 +5,7 @@
 
   <style name="BeenThereTheme" parent="@style/_BeenThereTheme"/>
 
-  <style name="_BeenThereTheme" parent="Theme.AppCompat.Light">
+  <style name="_BeenThereTheme" parent="ListViewAppTheme.White">
 
     <item name="android:editTextBackground">@drawable/beentheretheme_edit_text_holo_light</item>
 
